--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,22 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url('https://i.pinimg.com/originals/00/9d/4d/009d4d63068480007461324c98d5728f.jpg');
+
+  /* background-image: url('https://i.pinimg.com/originals/00/9d/4d/009d4d63068480007461324c98d5728f.jpg'); */
 }
 
 .current-weather-wrapper{
   padding: 100px 0 0 100px;
+  display: inline-block;
 }
+
+.app-detail-weather-wrapper{
+  padding: 50px;
+  float: right;
+  display: inline-block;
+}
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 
